src/index.css
@import "~bootstrap/dist/css/bootstrap.min.css";
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}
.quiz-btn {
  width: 15rem;
  padding: 5px 12px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  background: #ffffff;
  margin-right: 1rem;
  border-radius: 25px;
  border: 1px solid  #8ab2ef;
  background: #ffffff;
  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
  font-weight: 400;
}
.quiz-btn:hover{
  background-color: #5794ef;
  color: white;
  transition: all 0.3s ease;
  font-weight: 600;
}

